--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -222,7 +222,7 @@
                     <div class="order-dates" style="display: none; font-weight: 700;">
                         <p>Quantity: <%= order.quantity %></p>
                         <p>Order Date: <%= order.order_time %></p>
-                        <% if(order.arrival_time != null){ %>
+                        <% if(order.arrival_time != ""){ %>
                             <p>Arrival Time: <%= order.arrival_time %></p>
                         <% }else{ %>
                             <p>Estimated Arrival Date: <%= order.estimated_arrivaltime %></p>
@@ -260,3 +260,4 @@
 </body>
 
 </html>
+
